# k_means

./: CMakeLists.txt  k-means_CUDA.cu  k-means_CUDA.cuh  k-means_OPENMP.cpp  k-means_OPENMP.h  k-means_SEQ.cpp  k-means_SEQ.h  point.h  test.cpp  test_report.cpp  utilities.cpp  utilities.h
datasets/: rand_dataset_10.txt  rand_dataset_10000.txt  rand_dataset_100000.txt
